feat: ajout de la documentation pour le swagger

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>TCG Socket.io Test Client</title>
     <link href="style.css" rel="stylesheet" />
-    <script src="/socket.io/socket.io.js"></script>
+    <!-- Load Socket.io from CDN instead of server -->
+    <script src="https://cdn.socket.io/4.6.1/socket.io.min.js"></script>
   </head>
   <body>
     <h1>TCG Socket.io Test Client</h1>
